--- a/app/src/main/res/layout/activity_tambah_data_peminjaman.xml
+++ b/app/src/main/res/layout/activity_tambah_data_peminjaman.xml
@@ -57,12 +57,12 @@
 
             <Spinner
                 android:id="@+id/spinner_barang"
-                android:layout_width="0dp"
+                android:layout_width="185dp"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="32dp"
                 android:layout_marginTop="8dp"
                 android:padding="20dp"
-                app:layout_constraintEnd_toEndOf="@+id/inp_kelas_peminjam"
-                app:layout_constraintStart_toStartOf="@+id/inp_kelas_peminjam"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView14"
                 tools:ignore="MissingConstraints" />
 
@@ -90,12 +90,12 @@
 
             <Spinner
                 android:id="@+id/spinner_jumlah"
-                android:layout_width="0dp"
+                android:layout_width="100dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
+                android:layout_marginStart="32dp"
+                android:layout_marginTop="8dp"
                 android:padding="20dp"
-                app:layout_constraintEnd_toEndOf="@+id/spinner_barang"
-                app:layout_constraintStart_toStartOf="@+id/spinner_barang"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView15" />
 
             <TextView
