--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -19,15 +19,13 @@
                 android:id="@+id/tv_login"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
+                android:layout_marginStart="32dp"
                 android:layout_marginTop="40dp"
-                android:layout_marginEnd="16dp"
+                android:fontFamily="@font/montserrat"
                 android:text="@string/tvlogin"
                 android:textAppearance="@style/TextAppearance.AppCompat.Large"
                 android:textSize="52sp"
                 android:textStyle="bold"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.06"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -35,13 +33,12 @@
                 android:id="@+id/tv_emaillreg"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="24dp"
+                android:layout_marginStart="32dp"
                 android:layout_marginTop="48dp"
-                android:layout_marginEnd="16dp"
+                android:fontFamily="@font/montserrat"
                 android:text="@string/tvemail"
                 android:textColor="@android:color/background_dark"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.031"
+                android:textSize="14sp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tv_login" />
 
@@ -49,13 +46,11 @@
                 android:id="@+id/tv_passlog"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
+                android:layout_marginStart="32dp"
                 android:layout_marginTop="16dp"
-                android:layout_marginEnd="16dp"
+                android:fontFamily="@font/montserrat"
                 android:text="@string/tvpasswordlog"
                 android:textColor="@android:color/background_dark"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.081"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/inp_email_login" />
 
@@ -67,6 +62,7 @@
                 android:layout_marginTop="32dp"
                 android:layout_marginEnd="32dp"
                 android:background="@drawable/custom_button_2"
+                android:fontFamily="@font/montserrat"
                 android:text="@string/btn_login"
                 android:textColor="@color/colorAccent"
                 app:layout_constraintEnd_toEndOf="@+id/inp_pass_login"
@@ -79,7 +75,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="60dp"
+                android:fontFamily="@font/montserrat"
                 android:text="@string/t_reg"
+                android:textSize="12sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/btnlogin" />
 
@@ -89,6 +87,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:background="@drawable/custom_button_2"
+                android:fontFamily="@font/montserrat"
                 android:text="@string/bt_reg_login"
                 android:textColor="@color/colorAccent"
                 app:layout_constraintEnd_toEndOf="@+id/btnlogin"
@@ -103,6 +102,7 @@
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="32dp"
                 android:ems="10"
+                android:fontFamily="@font/montserrat"
                 android:inputType="textPersonName"
                 android:text="@string/t_email"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -117,6 +117,7 @@
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="32dp"
                 android:ems="10"
+                android:fontFamily="@font/montserrat"
                 android:inputType="textPassword"
                 android:text="@string/t_pass"
                 app:layout_constraintEnd_toEndOf="parent"
