--- a/app/src/main/res/layout/activity_tambah_data.xml
+++ b/app/src/main/res/layout/activity_tambah_data.xml
@@ -2,7 +2,7 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".tambahdata.TambahData">
+    tools:context=".ui.activity.TambahData">
 
     <ScrollView
         android:layout_width="match_parent"
